--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:dev": "node scripts/dev-utils.js build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.{ts,vue} --fix",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "type-check": "vue-tsc --noEmit",
-    "clean": "rm -rf dist/*"
+    "clean": "rm -rf dist/*",
+    "ext:key:add": "node scripts/dev-utils.js key:add",
+    "ext:key:remove": "node scripts/dev-utils.js key:remove",
+    "ext:validate": "node scripts/dev-utils.js validate"
   },
   "keywords": [
     "browser-extension",
@@ -26,13 +30,15 @@
     "vue": "^3.3.8"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^2.0.0-beta.19",
     "@types/chrome": "^0.0.246",
     "@types/node": "^20.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "@vitejs/plugin-vue": "^4.4.1",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
     "@vue/test-utils": "^2.4.1",
-    "@crxjs/vite-plugin": "^2.0.0-beta.19",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -40,11 +46,10 @@
     "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.5",
+    "terser": "^5.44.0",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.22",
-    "@vitest/ui": "^0.34.6",
-    "@vitest/coverage-v8": "^0.34.6"
+    "vue-tsc": "^1.8.22"
   }
 }
