--- a/package.json
+++ b/package.json
@@ -1,55 +1,31 @@
 {
   "name": "ai-reading",
   "version": "1.0.0",
-  "description": "智能小说阅读浏览器插件",
-  "main": "dist/background.js",
+  "description": "智能小说阅读浏览器插件 - 极简化版本",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "node scripts/dev-utils.js build",
-    "preview": "vite preview",
-    "lint": "eslint src/**/*.{ts,vue} --fix",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "type-check": "vue-tsc --noEmit",
-    "clean": "rm -rf dist/*",
-    "ext:key:add": "node scripts/dev-utils.js key:add",
-    "ext:key:remove": "node scripts/dev-utils.js key:remove",
-    "ext:validate": "node scripts/dev-utils.js validate"
+    "start": "echo '直接加载项目根目录到 Chrome 扩展程序页面'",
+    "dev": "echo '开发模式: 直接编辑源文件，无需构建'",
+    "install": "echo '安装说明: 在 Chrome 扩展程序页面启用开发者模式，点击加载已解压的扩展程序，选择项目根目录'"
   },
   "keywords": [
     "browser-extension",
     "novel-reading",
     "text-to-speech",
-    "chrome-extension"
+    "chrome-extension",
+    "vanilla-javascript",
+    "zero-build"
   ],
-  "author": "Your Name",
+  "author": "AI Reading Team",
   "license": "MIT",
-  "dependencies": {
-    "vue": "^3.3.8"
+  "engines": {
+    "node": ">=16.0.0"
   },
-  "devDependencies": {
-    "@crxjs/vite-plugin": "^2.0.0-beta.19",
-    "@types/chrome": "^0.0.246",
-    "@types/node": "^20.6.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "@vitejs/plugin-vue": "^4.4.1",
-    "@vitest/coverage-v8": "^0.34.6",
-    "@vitest/ui": "^0.34.6",
-    "@vue/test-utils": "^2.4.1",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "jsdom": "^22.1.0",
-    "prettier": "^3.0.3",
-    "sass": "^1.69.5",
-    "terser": "^5.44.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.22"
-  }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/ai-reading.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/ai-reading/issues"
+  },
+  "homepage": "https://github.com/your-username/ai-reading#readme"
 }
